[gd_scene load_steps=3 format=3 uid="uid://bqvdhb8tkd41d"]

[ext_resource type="Theme" uid="uid://cs1vqepidtt1a" path="res://addons/godot-screenreader/ui/style/Access.tres" id="1_qdr07"]
[ext_resource type="Script" path="res://addons/godot-screenreader/menu/ax/ax_menu_control.gd" id="2_c6n72"]

[node name="AxMenuControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qdr07")
script = ExtResource("2_c6n72")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Screenreader Tools"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NodeSelectButton" type="Button" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Control Selector"

[node name="Options" type="Button" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="TutorialButton" type="Button" parent="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "View Tutorial"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/NodeSelectButton" to="." method="_on_node_select_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
